# PlasmaVideoWallpaper

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md  VideoWallpaper.kdev4
locale/zh_CN/LC_MESSAGES/: plasma_wallpaper_org.kde.plasma.videowallpaper.mo  plasma_wallpaper_org.kde.plasma.videowallpaper.po
package/: metadata.desktop
package/contents/config/: main.xml
package/contents/ui/: .main.qml.kate-swp  config.qml  main.qml
